--- a/package.json
+++ b/package.json
@@ -12,13 +12,10 @@
   },
   "dependencies": {
     "ejs": "^2.5.6",
-    "express": "^4.17.1",
-    "i": "^0.3.6",
-    "node-fetch": "^2.6.1"
+    "express": "^4.15.2"
   },
   "devDependencies": {
     "got": "^11.3.0",
-    "nodemon": "^2.0.6",
     "tape": "^4.7.0"
   },
   "repository": {
